# AJ-banking-app

./: CHANGES.md  README.md  main.py  pyproject.toml  setup.py  start.sh
templates/: base.html  child_dashboard.html  login.html  manage_chore_types.html  parent_dashboard.html
tests/: conftest.py  test_models.py  test_routes.py
